# grasschain_contract_spl

./: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
anchor/: .gitignore  Anchor.toml
anchor/programs/grasschain_contract_spl/: Cargo.toml
anchor/programs/grasschain_contract_spl/src/: lib.rs
anchor/src/: grasschain_contract_spl-exports.ts  index.ts
anchor/tests/: bankrun.spec.ts
public/: manifest.json  tokenMetadata.json
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/app/account/: page.tsx
src/app/calculator/: page.tsx
src/app/cancel/: page.tsx
src/app/debug/: page.tsx
src/app/notifications/: layout..tsx  page.tsx
src/app/success/: page.tsx
src/app/tracking/: layout.tsx  page.tsx
src/app/upload-image/: page.tsx
src/components/: ContactProgressBar.tsx  NotificationsList.tsx
src/components/auth/: AuthGuard.tsx
src/components/calculator/: CalfGrowthChart.tsx  InvestmentCard.tsx  InvestmentChart.tsx  InvestmentForm.tsx  InvestmentPlan.tsx  PastoraLogo.tsx  WeightCard.tsx  WeightGainChart.tsx  WeightGainForm.tsx  WeightGainProjection.tsx
src/components/grasschain_contract_spl/: .grasschain_contract_spl-data-access.tsx.swp  AdminExportCSV.tsx  DebugTemporal.tsx  LoginIsland.tsx  (+3 more)
src/hooks/: useAuthIdentity.ts  useNotifications.ts  useUnifiedIdentity.ts  useUsdcBalance.ts
src/lib/: auth.ts  constants.ts  dbConnect.ts  dbSchemas.ts  flags.ts  stripeClient.ts
src/models/: Notification.ts
src/styles/: stepper.css
src/utils/: investment.ts  ixorigue-auth.ts  weight.ts
(+50 files in other folders)
